FIX SCROLLBAR PROBLEM

--- a/carin-frontend/src/components/start/Start.css
+++ b/carin-frontend/src/components/start/Start.css
@@ -21,6 +21,7 @@ html {
 }
 
 .background {
+    height: 100vh;
     position: relative;
     padding: 0;
     margin: 0;
@@ -40,9 +41,6 @@ html {
     border: none;
     height: 250px;
     align-items: center;
-    
-
-
 }
 
 .startbuttonpicture {
